add title, change github

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
   </div>
 
   <div class="center-container">
+    <h1 class="main-title">麻將抓牌練習</h1>
     <div class="dice-container" id="diceContainer"></div>
     <div class="button-container">
       <div class="button-row">
@@ -127,13 +128,11 @@
 
         <div id="rules" class="tab-content active">
             <h3 class="first-header">介紹</h3>
-            <!-- <div class="centered-content"> -->
                 <p>這是台灣麻將抓牌練習的工具，你可以依照骰子的點數來練習抓牌。</p>
-            <!-- </div> -->
 
 			<h3>怎麼抓牌？</h3>
 			<p>
-				請參考
+				請參考<a href="https://www.youtube.com/watch?v=UVEDyAVftww" target="_blank">這個影片</a>來了解台灣麻將的抓牌規則。
 			</p>
 
             <h3>操作方式</h3>
@@ -153,7 +152,7 @@
                     Make with paws 🐾 by Akizumi 🦊
                 </p>
                 <div class="about-links">
-                    <a href="https://github.com/AaronLin1229" class="about-link" target="_blank">
+                    <a href="https://github.com/AkizumiFox" class="about-link" target="_blank">
                         <i class="fab fa-github"></i> GitHub
                     </a>
                     <a href="https://aaronlin1229.github.io/" class="about-link" target="_blank">
