--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div class="table">
   <div class="wind-label top-label">西</div>
   <div class="wind-label bottom-label">東</div>
-  <div class="wind-label left-label">南</div>
-  <div class="wind-label right-label">北</div>
+  <div class="wind-label left-label">北</div>
+  <div class="wind-label right-label">南</div>
   
   <div class="row top-row">
     <div class="tile W t1" onclick="toggleTile(this)"></div>
@@ -35,23 +35,23 @@
   </div>
 
   <div class="row right-row">
-    <div class="tile N t1" onclick="toggleTile(this)"></div>
-    <div class="tile N t2" onclick="toggleTile(this)"></div>
-    <div class="tile N t3" onclick="toggleTile(this)"></div>
-    <div class="tile N t4" onclick="toggleTile(this)"></div>
-    <div class="tile N t5" onclick="toggleTile(this)"></div>
-    <div class="tile N t6" onclick="toggleTile(this)"></div>
-    <div class="tile N t7" onclick="toggleTile(this)"></div>
-    <div class="tile N t8" onclick="toggleTile(this)"></div>
-    <div class="tile N t9" onclick="toggleTile(this)"></div>
-    <div class="tile N t10" onclick="toggleTile(this)"></div>
-    <div class="tile N t11" onclick="toggleTile(this)"></div>
-    <div class="tile N t12" onclick="toggleTile(this)"></div>
-    <div class="tile N t13" onclick="toggleTile(this)"></div>
-    <div class="tile N t14" onclick="toggleTile(this)"></div>
-    <div class="tile N t15" onclick="toggleTile(this)"></div>
-    <div class="tile N t16" onclick="toggleTile(this)"></div>
-    <div class="tile N t17" onclick="toggleTile(this)"></div>
+    <div class="tile S t1" onclick="toggleTile(this)"></div>
+    <div class="tile S t2" onclick="toggleTile(this)"></div>
+    <div class="tile S t3" onclick="toggleTile(this)"></div>
+    <div class="tile S t4" onclick="toggleTile(this)"></div>
+    <div class="tile S t5" onclick="toggleTile(this)"></div>
+    <div class="tile S t6" onclick="toggleTile(this)"></div>
+    <div class="tile S t7" onclick="toggleTile(this)"></div>
+    <div class="tile S t8" onclick="toggleTile(this)"></div>
+    <div class="tile S t9" onclick="toggleTile(this)"></div>
+    <div class="tile S t10" onclick="toggleTile(this)"></div>
+    <div class="tile S t11" onclick="toggleTile(this)"></div>
+    <div class="tile S t12" onclick="toggleTile(this)"></div>
+    <div class="tile S t13" onclick="toggleTile(this)"></div>
+    <div class="tile S t14" onclick="toggleTile(this)"></div>
+    <div class="tile S t15" onclick="toggleTile(this)"></div>
+    <div class="tile S t16" onclick="toggleTile(this)"></div>
+    <div class="tile S t17" onclick="toggleTile(this)"></div>
   </div>
 
   <div class="row bottom-row">
@@ -75,23 +75,23 @@
   </div>
 
   <div class="row left-row">
-    <div class="tile S t1" onclick="toggleTile(this)"></div>
-    <div class="tile S t2" onclick="toggleTile(this)"></div>
-    <div class="tile S t3" onclick="toggleTile(this)"></div>
-    <div class="tile S t4" onclick="toggleTile(this)"></div>
-    <div class="tile S t5" onclick="toggleTile(this)"></div>
-    <div class="tile S t6" onclick="toggleTile(this)"></div>
-    <div class="tile S t7" onclick="toggleTile(this)"></div>
-    <div class="tile S t8" onclick="toggleTile(this)"></div>
-    <div class="tile S t9" onclick="toggleTile(this)"></div>
-    <div class="tile S t10" onclick="toggleTile(this)"></div>
-    <div class="tile S t11" onclick="toggleTile(this)"></div>
-    <div class="tile S t12" onclick="toggleTile(this)"></div>
-    <div class="tile S t13" onclick="toggleTile(this)"></div>
-    <div class="tile S t14" onclick="toggleTile(this)"></div>
-    <div class="tile S t15" onclick="toggleTile(this)"></div>
-    <div class="tile S t16" onclick="toggleTile(this)"></div>
-    <div class="tile S t17" onclick="toggleTile(this)"></div>
+    <div class="tile N t1" onclick="toggleTile(this)"></div>
+    <div class="tile N t2" onclick="toggleTile(this)"></div>
+    <div class="tile N t3" onclick="toggleTile(this)"></div>
+    <div class="tile N t4" onclick="toggleTile(this)"></div>
+    <div class="tile N t5" onclick="toggleTile(this)"></div>
+    <div class="tile N t6" onclick="toggleTile(this)"></div>
+    <div class="tile N t7" onclick="toggleTile(this)"></div>
+    <div class="tile N t8" onclick="toggleTile(this)"></div>
+    <div class="tile N t9" onclick="toggleTile(this)"></div>
+    <div class="tile N t10" onclick="toggleTile(this)"></div>
+    <div class="tile N t11" onclick="toggleTile(this)"></div>
+    <div class="tile N t12" onclick="toggleTile(this)"></div>
+    <div class="tile N t13" onclick="toggleTile(this)"></div>
+    <div class="tile N t14" onclick="toggleTile(this)"></div>
+    <div class="tile N t15" onclick="toggleTile(this)"></div>
+    <div class="tile N t16" onclick="toggleTile(this)"></div>
+    <div class="tile N t17" onclick="toggleTile(this)"></div>
   </div>
 
   <div class="center-container">
@@ -103,8 +103,8 @@
         <button class="clear-button" onclick="clearAllTiles()">清除所選</button>
       </div>
       <button class="check-button" onclick="checkAnswer()">檢查答案</button>
-      <!-- <input type="number" id="debugDiceTotal" min="3" max="18" placeholder="3-18">
-      <button onclick="debugSetDice()">Set Dice</button> -->
+      <input type="number" id="debugDiceTotal" min="3" max="18" placeholder="3-18">
+      <button onclick="debugSetDice()">Set Dice</button>
     </div>
   </div>
 </div>
