--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="tile W t15" onclick="toggleTile(this)"></div>
     <div class="tile W t16" onclick="toggleTile(this)"></div>
     <div class="tile W t17" onclick="toggleTile(this)"></div>
+    <div class="tile W t18" onclick="toggleTile(this)"></div>
   </div>
 
   <div class="row right-row">
@@ -52,6 +53,7 @@
     <div class="tile S t15" onclick="toggleTile(this)"></div>
     <div class="tile S t16" onclick="toggleTile(this)"></div>
     <div class="tile S t17" onclick="toggleTile(this)"></div>
+    <div class="tile S t18" onclick="toggleTile(this)"></div>
   </div>
 
   <div class="row bottom-row">
@@ -72,6 +74,7 @@
     <div class="tile E t15" onclick="toggleTile(this)"></div>
     <div class="tile E t16" onclick="toggleTile(this)"></div>
     <div class="tile E t17" onclick="toggleTile(this)"></div>
+    <div class="tile E t18" onclick="toggleTile(this)"></div>
   </div>
 
   <div class="row left-row">
@@ -92,6 +95,7 @@
     <div class="tile N t15" onclick="toggleTile(this)"></div>
     <div class="tile N t16" onclick="toggleTile(this)"></div>
     <div class="tile N t17" onclick="toggleTile(this)"></div>
+    <div class="tile N t18" onclick="toggleTile(this)"></div>
   </div>
 
   <div class="center-container">
@@ -117,6 +121,7 @@
 <div id="feedbackOverlay" class="feedback-overlay"></div>
 
 <button id="helpButton" class="help-button" onclick="toggleModal()">?</button>
+<button id="ruleToggle" class="rule-toggle-button" onclick="toggleRules()">北部牌（18張）</button>
 
 <div id="modalOverlay" class="modal-overlay">
     <div id="helpModal" class="modal">
@@ -147,6 +152,11 @@
                 <li>⭕️ 表示正確，自動進入下一題</li>
                 <li>❌ 表示錯誤，可以繼續嘗試</li>
             </ul>
+
+			<h3>版本</h3>
+			<p>
+				v.1.2.0
+			</p>
         </div>
 
         <div id="about" class="tab-content">
