--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>麻將抓牌練習工具</title>
+  <link rel="icon" href="icon.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -155,7 +156,7 @@
 
 			<h3>版本</h3>
 			<p>
-				v.1.2.1
+				v.1.2.2
 			</p>
         </div>
 
