--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=1.0"/>
   <title>麻將抓牌練習工具</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -155,7 +155,7 @@
 
 			<h3>版本</h3>
 			<p>
-				v.1.2.3
+				v.1.2.4
 			</p>
         </div>
 
